[package]
name = "invade"
version = "0.0.3"
edition = "2021"
authors = ["Georges KABBOUCHI <georges.kabbouchi@gmail.com>"]
keywords = ["reflection", "invade"]
license = "MIT OR Apache-2.0"
description = "A library to reflect on Rust types and generate code"
readme = "README.md"
repository = "https://github.com/KABBOUCHI/invade"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
invade_derive = { path = "invade_derive", version = "0.0.2" }